@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Fix expanding all mailboxes in dynamic view (Bug #11289).
 * [mms] Fix handling of identity tie-to addresses when searching for matching identities.
 * [mms] Fix recursive mailbox delete in dynamic view (Bug #11288).
  </notes>
@@ -2618,6 +2619,7 @@
    <date>2012-07-20</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fix expanding all mailboxes in dynamic view (Bug #11289).
 * [mms] Fix handling of identity tie-to addresses when searching for matching identities.
 * [mms] Fix recursive mailbox delete in dynamic view (Bug #11288).
    </notes>
